Add basic html structure

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   <title>Etch-A-Sketch</title>
 </head>
 <body>
-  
+  <main>
+    <h1>Etch-A-Sketch</h1>
+    <div class="buttons">
+      <button id="custom-grid" class="btn">Custom</button>
+      <button id="reset" class="btn">Reset</button>
+    </div>
+    <div class="grid-container"></div>
+  </main>
 </body>
 </html>
