--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <main>
-    <h1>Etch-A-Sketch</h1>
+    <!-- <h1>Etch-A-Sketch</h1> -->
     <div class="buttons">
       <button id="custom-grid" class="btn">Custom</button>
       <button id="reset" class="btn">Reset</button>
