Apply page formatting and add footer section

--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 </head>
 <body>
   <main>
-    <!-- <h1>Etch-A-Sketch</h1> -->
+    <h1>Etch-A-Sketch</h1>
     <div class="buttons">
-      <button id="custom-grid" class="btn">Custom</button>
-      <button id="reset" class="btn">Reset</button>
+      <button id="custom-grid" class="btn">Custom Grid</button>
+      <button id="reset" class="btn">Reset Grid</button>
     </div>
     <div class="grid-container"></div>
   </main>
+  <footer>
+    <p>Copyright &copy; 2022 Juan Mata</p>
+    <p>A personal project created for the <a href="https://www.theodinproject.com/" target="_blank">Odin Project</a>.</p>
+</footer>
 </body>
 </html>
